<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vhybe</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="title_section1">" Timeline"</string>
    <string name="title_section2">" Popular"</string>
    <string name="title_section3">" Search"</string>
    <string name="title_section4">" Friends"</string>
    <string name="title_section5">"  Profile"</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_welcome">Vhybe</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="button_send">Send</string>
    <string name="button_like">Like</string>
    <string name="button_comment">Comment</string>
    <string name="button_likes">Likes</string>
    <string name="title_activity_likes">Likes</string>
    <string name="title_activity_comments">Comments</string>
    <string name="search_users">Search users</string>
    <string name="logout">Logout</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_followers">Followers</string>
    <string name="title_activity_following">Following</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Repassword</string>
    <string name="fullname">Full name</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone</string>
    <string name="web_address">Web address</string>
    <string name="map_hint">Long press on map to place pin</string>
    <string name="select_photo">Select photo</string>
    <string name="no_items">There are no items found</string>
    <string name="no_items_friends">You dont have any friends</string>
    <string name="no_items_popular">You dont have any posts</string>
    <string name="no_item_timeline">There are no posts in your timeline.\nTap here to add new post</string>
    <string name="no_items_comment">There are no Comments found. Be the first to comment.</string>
    <string name="no_items_chat">You dont have any chats</string>
    <string name="no_items_friend">You dont have any friends</string>
    <string name="no_items_request">You dont have any friend requests</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="title_activity_post_detail">Post Detail</string>

    <!-- new added -->
    <string name="do_not_have_account">Do not have any account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="button_signup_here">Sign up here</string>
    <string name="button_login_here">Login here</string>
    <string name="action_new_post">New Post</string>
    <string name="action_map_near_by">View on Map</string>
    <string name="action_search_filter">Filter</string>
    <string name="text_profile_name">What is your Full Name?*</string>
    <string name="button_profile_male">Male</string>
    <string name="button_near_by">Near By</string>
    <string name="button_custom">Custom</string>
    <string name="button_chat">Chat</string>
    <string name="button_friends">Friends</string>
    <string name="button_request">Request</string>
    <string name="button_profile_female">Female</string>
    <string name="button_profile_both">Both</string>
    <string name="button_profile_single">Single</string>
    <string name="button_profile_married">Relationship</string>
    <string name="text_profile_email">What is your contact E-Mail?*</string>
    <string name="text_im_a">I\'m a....*</string>
    <string name="text_profile_interest">Share something you like....</string>
    <string name="text_profile_dob">When were you born?</string>
    <string name="text_profile_location">Location</string>
    <string name="hint_custom_search">Search</string>
    <string name="title_activity_map_near_by">MapNearBy</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_change_password">Settings</string>

    <!-- Newly added strings by Pratiti -->
    <string name="personal">Personal</string>
    <string name="other">Other</string>
    <string name="changepassword">Change Password</string>
    <string name="save">SAVE</string>
    <string name="pleaseenterfullname">Please enter full name</string>
    <string name="pleaseenteremail">Please enter email address</string>
    <string name="pleaseenterdob">Please enter DOB</string>
    <string name="minimumageshouldbeeleven">Minimum age should be  11 yrs</string>
    <string name="enable_location_messaqe">Please enable location</string>
    <string name="occupation">Occupation</string>
    <string name="title_activity_chat">Chat</string>

</resources>