<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    tools:context=".RegisterActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/linearLayoutLoginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/textViewLoginStatusMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/scrollViewLoginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroupIndividialCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/relativeLayoutImageRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <TextView
                    android:id="@+id/textViewUserAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.fontawesome.TextAwesome
                    android:id="@+id/email_icon"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:background="@color/app_color"
                    android:gravity="center"
                    android:text="@string/fa_envelope_o"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/email_icon"
                    android:layout_alignTop="@+id/email_icon"
                    android:background="@layout/edittext_border_bg"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.fontawesome.TextAwesome
                    android:id="@+id/password_icon"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:background="@color/app_color"
                    android:gravity="center"
                    android:text="@string/fa_key"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/password_icon"
                    android:layout_alignTop="@+id/password_icon"
                    android:background="@layout/edittext_border_bg"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_register"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:background="@color/app_color"
                android:onClick="buttonRegisterOnClick"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_sign_in_register"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txtDoNot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:gravity="center"
                android:text="@string/already_have_account" />

            <Button
                android:id="@+id/buttonLogInHere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/app_color"
                android:onClick="buttonLogInHereOnClick"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/button_login_here"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</merge>